--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,9 @@ $cardBackground: #052940;
 $popText: #FAB720;
 // $popText: #f44d8d;
 // $popText: #64ffda;
-$lightPopText: #64ffdb1a;
+
+$lightPopText: #fab92016;
+// $lightPopText: #64ffdb1a;
 
 $titleText: #ccd6f6;
 
